--- a/index.html
+++ b/index.html
@@ -32,8 +32,8 @@
         </p>
 
         <div>
-            <img src="/IMAGE/MRU1.jpg" alt="">
-            <img src="/IMAGE/MRU3.jpg" alt="">
+            <img src="./IMAGE/MRU1.jpg" alt="">
+            <img src="./IMAGE/MRU3.jpg" alt="">
         </div>
 
 
@@ -125,8 +125,8 @@
             </p>
 
             <div>
-                <img src="/IMAGE/mruv1.png" alt="">
-                <img src="/IMAGE/mruv2.png" alt="">
+                <img src="./IMAGE/mruv1.png" alt="">
+                <img src="./IMAGE/mruv2.png" alt="">
             </div>
 
         </header>
@@ -212,7 +212,7 @@
         <p>Correo: aajuc3@miumg.edu.gt</p>
     </footer>
 
-    <script src="./JS/script.js"></script>
+    <script src="./js/script.js"></script>
 
 </body>
 
